--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
+    "autoprefixer": "^10.4.21",
+    "postcss-cli": "^11.0.1",
     "vite": "^4.3.9"
-  }
+  },
+  "browserslist": [
+      "> 1%",
+      "last 2 versions",
+      "not dead"
+  ]
 }
