--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@preact/preset-vite": "^2.5.0",
     "autoprefixer": "^10.4.21",
     "postcss-cli": "^11.0.1",
+    "postcss-preset-env": "^10.2.4",
     "vite": "^4.3.9"
   },
   "browserslist": [
-      "> 1%",
-      "last 2 versions",
-      "not dead"
+    "> 1%",
+    "last 2 versions",
+    "not dead"
   ]
 }
